fix home page content overflowing into footer

--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -32,4 +32,5 @@
   display: inline-block;
   font-size: var(--text-size-large);
   color: white;
+  overflow: auto;
 }
